istio/app-canary.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-v2
  labels: { app: app, version: v2 }
  annotations:
    prometheus.io/scrape: "true" # this is the magic instruction to enable metric pick-up
    prometheus.io/path: "/metrics" # optional, needed for non-default paths
    prometheus.io/port: "3001"
spec:
  containers:
  - name: app
    image: ghcr.io/remla25-team4/app:3.0.2-canary
    imagePullPolicy: Always
    ports:
    - containerPort: 3001
---
apiVersion: v1
kind: Pod
metadata:
  name: model-service-v2
  labels: { app: model-service, version: v2 }
  annotations:
    prometheus.io/scrape: "true" # this is the magic instruction to enable metric pick-up
    prometheus.io/path: "/metrics" # optional, needed for non-default paths
    prometheus.io/port: "8080"
spec:
  containers:
  - name: model-service-container
    image: ghcr.io/remla25-team4/model-service:2.0.1
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
