istio/app.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-v1
  labels: { app: app, version: v1 }
  annotations:
    prometheus.io/scrape: "true" # this is the magic instruction to enable metric pick-up
    prometheus.io/path: "/metrics" # optional, needed for non-default paths
    prometheus.io/port: "3001"
spec:
  containers:
  - name: app
    image: ghcr.io/remla25-team4/app:2.0.7
    imagePullPolicy: Always
    ports:
    - containerPort: 3001
---
apiVersion: v1
kind: Pod
metadata:
  name: model-service-v1
  labels: { app: model-service, version: v1 }
  annotations:
    prometheus.io/scrape: "true" # this is the magic instruction to enable metric pick-up
    prometheus.io/path: "/metrics" # optional, needed for non-default paths
    prometheus.io/port: "8080"
spec:
  containers:
  - name: model-service-container
    image: ghcr.io/remla25-team4/model-service:1.0.1
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: { name: app }
spec:
  selector: { app: app }
  ports:
  - { name: http, port: 1234, targetPort: 3001 }
---
apiVersion: v1
kind: Service
metadata: { name: model-service }
spec:
  selector: { app: model-service }
  ports:
  - { name: http, port: 8080, targetPort: 8080 }
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
