istio/sticky-routing.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata: { name: app-dr }
spec:
  host: app
  subsets:
  - name: v1
    labels: { version: v1 }
  - name: v2
    labels: { version: v2 }
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: userid
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app
spec:
  gateways:
    - my-gateway
  hosts:
    - "*"
  http:
    - match:
      - headers:
          userid:
            regex: ".*[02468]$" # even user ids get v2 always
      route:
      - destination:
          host: app
          subset: v2
    - route:
      - destination:
          host: app
          subset: v1  # odd user ids get v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: model-service-dr
spec:
  host: model-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "userid"
