istio/weighted-routing.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata: { name: app-dr }
spec:
  host: app
  subsets:
  - name: v1
    labels: { version: v1 }
  - name: v2
    labels: { version: v2 }
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app
spec:
  gateways:
    - my-gateway
  hosts:
    - "*"
  http:
  - route:
    - destination:
        host: app
        subset: v1
      weight: 50
    - destination:
        host: app
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: model-service-dr
spec:
  host: model-service
  subsets:
    - name: v1
      labels: { version: v1 }
    - name: v2
      labels: { version: v2 }
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: model-service-vs
spec:
  hosts: [ model-service ]
  http:
  - match:
    - sourceLabels: { version: v2 }
    route:
    - destination: { host: model-service, subset: v2 }
  - route:
    - destination: { host: model-service, subset: v1 }
